426: fixed checkbox visibility and accessibility issues in payin form

--- a/sass/themes/payin/components/_payin-form.scss
+++ b/sass/themes/payin/components/_payin-form.scss
@@ -118,22 +118,6 @@ select:focus {
   background-position: 100% 0;
 }
 
-input[type=checkbox] {
-  // @include appearance(none);
-  appearance: none;
-  display: inline-block;
-  border:1px solid $item-grey;
-  background-color: $colour-white;
-  min-width: 30px;
-  min-height: 30px;
-  margin: 0;
-}
-input[type="checkbox"]:checked {
-  background: url(/images/form/checkbox-tick-new.png) 50% 50% no-repeat rgb(255, 255, 255);
-  // @include background-size(14px);
-  background-size: 14px;
-}
-
 .form__checkbox, 
 .form__radio {
   position: relative;
@@ -146,22 +130,48 @@ input[type="checkbox"]:checked {
 }
 .form__checkbox {
   @include clearfix;
-  
-  label.form__checkbox {
+
+  input[type=checkbox] {
+    opacity: 0;
+    position: absolute;
+    display: block;
+    left: 0;
+    margin: 5px 10px 10px 0px;
+    padding: 10px;
+    border: 1px solid #e8e8e8;
     width: 100%;
-    padding-right: calc(2*#{gutter()});
-    word-break: break-word;
+    max-width: 100%;  
+  }
+  input[type="checkbox"]:checked+label:before {
+    background: url(/images/form/checkbox-tick-new.png) 50% 50% no-repeat rgb(255, 255, 255);
+    background-size: 14px;
+  }
+  input[type="checkbox"]:focus+label:before {
+    border: 2px solid #e8e8e8;
+  }
+
+  label.form__checkbox {
+    overflow: visible;
     position: relative;
-    left: 40px;
+    left: 20px;
+    padding-right: calc(2*#{gutter()});
+    width: 100%;
+    word-break: break-word;
+    
+    &:before {
+      border: 1px solid #e8e8e8;
+      content: '';
+      height: 30px;
+      top: 6px;
+      left: -40px;
+      position: absolute;
+      vertical-align: top;
+      width: 30px;
+    }
 
     @include breakpoint($screen-lg) {
       top: 10px;
     }
-  }
-
-  input[type=checkbox] {
-    position: absolute; 
-    top: 15px;
   }
 
   &.form__checkbox-text-only {
@@ -172,13 +182,7 @@ input[type="checkbox"]:checked {
       &:hover {
         text-decoration: none;
       }
-    }
-
-    input[type=checkbox] {
-      @include opacity(0);
-      width: 100%;
-      cursor: pointer;
-    }  
+    } 
   }
 }
 
@@ -654,10 +658,6 @@ input[type="text"].form__field--postcode-lookup {
 
   img {
     max-height: 105px;
-  }
-
-  .form__fieldset {
-    width: 100%!important;
   }
 
   .form__checkbox input[type=checkbox] {
